--- a/Saraf_EDGE_Project.ipynb
+++ b/Saraf_EDGE_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1TJZcM4VgGwhWjEW4yQvP",
+      "authorship_tag": "ABX9TyO3pNmyMAp+wz/cKVaat6E/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "Adxztkrt11ST"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
         },
         "outputId": "e0ebd23f-91b3-46fc-a5e5-4460b3d286ea"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +105,7 @@
         "id": "8g5s9YFWHcct",
         "outputId": "e9f1411a-642b-4a0a-f026-027fa8b12308"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -504,7 +504,7 @@
         "id": "ebmNltPaJq4H",
         "outputId": "bb9af866-9bd5-421f-ad03-eeee81b306f0"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,7 +541,7 @@
         },
         "outputId": "e608e0c9-ed8e-4457-971a-2de559f8333f"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,7 +576,7 @@
         "id": "_7-whtlzdOzm",
         "outputId": "967f4ddd-1351-4341-98d4-c965e9ff62df"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,7 +619,7 @@
         "id": "VZna0ZOTfLKq",
         "outputId": "bd1f02a0-1cc6-4e97-ee6d-d84d6f8dcb02"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -671,7 +671,7 @@
         "id": "zjDAnm1biZXX",
         "outputId": "52aa7618-9d85-4f95-f1fe-f30b3c0a2cc8"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -704,7 +704,7 @@
         "id": "lkEAIfWFkYwd",
         "outputId": "291f39da-f947-49f1-be30-b545b4ef2ba2"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1154,7 +1154,7 @@
         "id": "rt8P5bPWo06e",
         "outputId": "0d86b0ea-47c8-4c31-a7f7-bf33ce249e18"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1573,9 +1573,59 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#validating student ID using regex, conditions: ID will have 4 characters, the first two will be 'NC' and the last two characters will be integers\n",
+        "\n",
+        "import re\n",
+        "\n",
+        "def validate_student_id(student_id):\n",
+        "  \"\"\"\n",
+        "  Validates a student ID using a regular expression.\n",
+        "\n",
+        "  Args:\n",
+        "    student_id: The student ID to validate.\n",
+        "\n",
+        "  Returns:\n",
+        "    True if the student ID is valid, False otherwise.\n",
+        "  \"\"\"\n",
+        "  pattern = r'^NC[0-9]{2}$'  # Matches \"NC\" followed by two digits\n",
+        "  match = re.match(pattern, student_id)\n",
+        "  return bool(match)\n",
+        "\n",
+        "\n",
+        "for student_id in record['ID']:\n",
+        "  if validate_student_id(student_id):\n",
+        "    print(f\"{student_id} is a valid student ID.\")\n",
+        "  else:\n",
+        "    print(f\"{student_id} is not a valid student ID.\")"
+      ],
+      "metadata": {
+        "id": "voz5Y_6Do9_a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9b659ddb-ae2e-4a60-c5e9-02cb12bb0bf1"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "NC01 is a valid student ID.\n",
+            "NC02 is a valid student ID.\n",
+            "NC03 is a valid student ID.\n",
+            "NC04 is a valid student ID.\n",
+            "NC05 is a valid student ID.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "voz5Y_6Do9_a"
+        "id": "Ylv428uxCfHF"
       },
       "execution_count": null,
       "outputs": []
