--- a/Saraf_EDGE_Project.ipynb
+++ b/Saraf_EDGE_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHItWrfnpOod+E/od/vgI8",
+      "authorship_tag": "ABX9TyNoOX+oWy8PeD1b1TWrRDgW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1622,9 +1622,98 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#handle file-not-found errors, division by zero errors\n",
+        "\n",
+        "import csv\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import re\n",
+        "import os\n",
+        "\n",
+        "# ... (rest of your code)\n",
+        "\n",
+        "# Handle file-not-found errors\n",
+        "try:\n",
+        "    df = pd.read_csv('record.csv')\n",
+        "    average_score = df['SWE'].mean()\n",
+        "    print(f'Average score in SWE:')\n",
+        "    print(average_score)\n",
+        "except FileNotFoundError:\n",
+        "    print(\"Error: 'record.csv' not found.\")\n",
+        "except KeyError:\n",
+        "    print(\"Error: 'SWE' column not found in the CSV file.\")\n",
+        "except Exception as e:\n",
+        "    print(f\"An unexpected error occurred: {e}\")\n",
+        "\n",
+        "# Handle division by zero errors\n",
+        "try:\n",
+        "    result = 10 / 0  # Example division by zero\n",
+        "except ZeroDivisionError:\n",
+        "    print(\"Error: Division by zero occurred.\")\n",
+        "\n",
+        "# ... (rest of your code)\n",
+        "\n",
+        "#Further improved file handling and error management\n",
+        "def process_data(filepath):\n",
+        "    try:\n",
+        "        if not os.path.exists(filepath):\n",
+        "            raise FileNotFoundError(f\"Error: The file '{filepath}' does not exist.\")\n",
+        "\n",
+        "        df = pd.read_csv(filepath)\n",
+        "\n",
+        "        # ... your existing data processing code using df ...\n",
+        "\n",
+        "        # Example of handling KeyError\n",
+        "        try:\n",
+        "            average_score = df['SWE'].mean()\n",
+        "            print(f\"Average SWE score: {average_score}\")\n",
+        "\n",
+        "            # Further calculations or operations\n",
+        "            # ...\n",
+        "\n",
+        "        except KeyError as e:\n",
+        "            print(f\"Error: Column '{e}' not found in the CSV file.\")\n",
+        "\n",
+        "        except Exception as e:\n",
+        "            print(f\"An unexpected error occurred while processing data: {e}\")\n",
+        "\n",
+        "    except FileNotFoundError as e:\n",
+        "        print(e) # prints the custom error message\n",
+        "    except pd.errors.ParserError as e:\n",
+        "        print(f\"Error parsing the CSV file: {e}\")  # Handle CSV parsing issues\n",
+        "    except Exception as e:\n",
+        "        print(f\"An unexpected error occurred: {e}\")\n",
+        "\n",
+        "# Call the function with the filepath\n",
+        "process_data('record.csv')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ylv428uxCfHF",
+        "outputId": "78a72734-970f-4320-d3f6-a49a396763c0"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Average score in SWE:\n",
+            "65.0\n",
+            "Error: Division by zero occurred.\n",
+            "Average SWE score: 65.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Ylv428uxCfHF"
+        "id": "q9dBaj6WGpp0"
       },
       "execution_count": null,
       "outputs": []
